updating README and adding a gitignore file for the makefile